--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E COMMERCE WEB</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static "STYLE.CSS" %}">
+    <link rel="stylesheet" href="{% static 'STYLE.CSS' %}">
 
 </head>
 {% load static %}
@@ -19,7 +19,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 
 {% load static %}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fontawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+<script
+    src="https://kit.fontawesome.com/75c5922cab.js"
+    crossorigin="anonymous"
+  ></script>
 
 
 
@@ -78,44 +81,60 @@
         <div class="row">
             <div class="col-4">
                 {% load static %}
-                <img src="{% static "RedStore_Img/images/product-1.jpg" %}">
+                <a href="/product/1"><img src="{% static "RedStore_Img/images/product-1.jpg" %}">
                 <h4>Red Printed T-shirt</h4>
                 <div class="rating">
-
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
                 </div>
 
-                <p>₹50.00</p>
+                <p>₹50.00</p></a>
             </div>
 
             <div class="col-4">
                 {% load static %}
-                <img src="{% static "RedStore_Img/images/product-2.jpg" %}">
+                <a href="/product/2"><img src="{% static "RedStore_Img/images/product-2.jpg" %}">
                 <h4>HRX Black Green Shoe</h4>
                 <div class="rating">
-
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-alt"></i>
                 </div>
 
-                <p>₹70.00</p>
+                <p>₹70.00</p></a>
             </div>
             <div class="col-4">
                 {% load static %}
-                <img src="{% static "RedStore_Img/images/product-3.jpg" %}">
+                <a href="/product/3"><img src="{% static "RedStore_Img/images/product-3.jpg" %}">
                 <h4>Grey Track Pants</h4>
                 <div class="rating">
-
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                    <i class="fa fa-star-o"></i>
                 </div>
 
-                <p>₹40.00</p>
+                <p>₹40.00</p></a>
             </div>
             <div class="col-4">
                 {% load static %}
-                <img src="{% static "RedStore_Img/images/product-4.jpg" %}">
+                <a href="/product/4"><img src="{% static "RedStore_Img/images/product-4.jpg" %}">
                 <h4>Puma Blue T-shirt</h4>
                 <div class="rating">
-
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
                 </div>
 
-                <p>₹50.00</p>
+                <p>₹50.00</p></a>
             </div>
 
         </div>
@@ -127,44 +146,60 @@
         <div class="row">
             <div class="col-4">
                 {% load static %}
-                <img src="{% static "RedStore_Img/images/product-5.jpg" %}">
+                <a href="/product/5"><img src="{% static "RedStore_Img/images/product-5.jpg" %}">
                 <h4>Grey Long Sneakers</h4>
                 <div class="rating">
-
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-alt"></i>
                 </div>
 
-                <p>₹70.00</p>
+                <p>₹70.00</p></a>
             </div>
 
             <div class="col-4">
                 {% load static %}
-                <img src="{% static "RedStore_Img/images/product-6.jpg" %}">
+                <a href="/product/6"><img src="{% static "RedStore_Img/images/product-6.jpg" %}">
                 <h4>Puma Black Triangle T-Shirt</h4>
                 <div class="rating">
-
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
                 </div>
 
-                <p>₹50.00</p>
+                <p>₹50.00</p></a>
             </div>
             <div class="col-4">
                 {% load static %}
-                <img src="{% static "RedStore_Img/images/product-7.jpg" %}">
+                <a href="/product/7"><img src="{% static "RedStore_Img/images/product-7.jpg" %}">
                 <h4>HRX Sport Socks</h4>
                 <div class="rating">
-
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
                 </div>
 
-                <p>₹30.00</p>
+                <p>₹30.00</p></a>
             </div>
             <div class="col-4">
                 {% load static %}
-                <img src="{% static "RedStore_Img/images/product-8.jpg" %}">
+                <a href="/product/8"><img src="{% static "RedStore_Img/images/product-8.jpg" %}">
                 <h4>Fossil Black Dial Watch</h4>
                 <div class="rating">
-
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
                 </div>
 
-                <p>₹150.00</p>
+                <p>₹150.00</p></a>
             </div>
 
         </div>
@@ -172,44 +207,60 @@
         <div class="row">
             <div class="col-4">
                 {% load static %}
-                <img src="{% static "RedStore_Img/images/product-9.jpg" %}">
+                <a href="/product/9"><img src="{% static "RedStore_Img/images/product-9.jpg" %}">
                 <h4>Black Watch</h4>
                 <div class="rating">
-
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-alt"></i>
                 </div>
 
-                <p>₹50.00</p>
+                <p>₹50.00</p></a>
             </div>
 
             <div class="col-4">
                 {% load static %}
-                <img src="{% static "RedStore_Img/images/product-10.jpg" %}">
+                <a href="/product/10"><img src="{% static "RedStore_Img/images/product-10.jpg" %}">
                 <h4>Puma Red-Black Shoe</h4>
                 <div class="rating">
-
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
                 </div>
 
-                <p>₹50.00</p>
+                <p>₹50.00</p></a>
             </div>
             <div class="col-4">
                 {% load static %}
-                <img src="{% static "RedStore_Img/images/product-11.jpg" %}">
+                <a href="/product/11"><img src="{% static "RedStore_Img/images/product-11.jpg" %}">
                 <h4>Grey Shoes</h4>
                 <div class="rating">
-
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
                 </div>
 
-                <p>₹50.00</p>
+                <p>₹50.00</p></a>
             </div>
             <div class="col-4">
                 {% load static %}
-                <img src="{% static "RedStore_Img/images/product-12.jpg" %}">
+                <a href="/product/12"><img src="{% static "RedStore_Img/images/product-12.jpg" %}">
                 <h4>Black Nike Track Pants</h4>
                 <div class="rating">
-
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                    <i class="fa fa-star-o"></i>
                 </div>
 
-                <p>₹50.00</p>
+                <p>₹50.00</p></a>
             </div>
 
         </div>
