--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,12 +6,11 @@
                 <nav>
                     <ul id="MenuItems">
                         <li><a href="/">Home</a></li>
-                        <li><a href="/about">About</a></li>
                         <li><a href="/contact">Contact</a></li>
                         <li><a href="/products">Products</a></li>
                         {% if uname != '' %}
-                        <li><a href="/account">{{ uname }}</a></li>
-                        <li><form action="/logout"><button type="submit">Log Out</button>
+                        <li><a href="">{{ uname }}</a></li>
+                        <li><a href="/logout">Log Out</a></li>
                         {% else %}
                         <li><a href="/auth">Login/Sign Up</a></li>
                         {% endif %}
