--- a/templates/payment.html
+++ b/templates/payment.html
@@ -33,7 +33,7 @@
                 <div class="form-group">
                     <label for="PaymentAmount">Payment amount</label>
                     <div class="amount-placeholder">
-                        <span>$</span>
+                        <span>₹</span>
                         <span>{{total}}</span>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                 </div>
                 <button id="PayButton" class="btn btn-block btn-success submit-button" type="submit" name="button-price" value={{total}}>
                     <span class="submit-button-lock"></span>
-                    <span class="align-middle">Pay ${{total}}</span>
+                    <span class="align-middle">Pay ₹{{total}}</span>
                 </button>
             </form>
         </div>
