--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -62,25 +62,25 @@
         <tbody>
           <tr>
             <td>Price Total</td>
-            <td align="right">${{order_total}}</td>
+            <td align="right">₹{{order_total}}</td>
           </tr>
           <tr>
             <td>Discount {{per.0}}%</td>
-            <td align="right">-${{disc}}</td>
+            <td align="right">-₹{{disc}}</td>
           </tr>
           <tr>
             <td>Tax {{per.1}}%</td>
-            <td align="right">${{tax}}</td>
+            <td align="right">₹{{tax}}</td>
           </tr>
           <tr>
             <td>Shipping fee</td>
-            <td align="right">${{ship}}</td>
+            <td align="right">₹{{ship}}</td>
           </tr>
         </tbody>
         <tfoot>
           <tr>
             <td>Total</td>
-            <td align="right">${{total}}</td>
+            <td align="right">₹{{total}}</td>
           </tr>
         </tfoot>
       </table>
