--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,19 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    {% load static %}
-    <link rel="stylesheet" href="{% static "STYLE.CSS" %}" />
-    {% load static %}
-    <script
-      src="https://kit.fontawesome.com/75c5922cab.js"
-      crossorigin="anonymous"
-    ></script>
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
+    
+    {% load static %}
+    <link rel="stylesheet" href="{% static "contact-style.css" %}">
+    {% load static %}
+    <link rel="stylesheet" href="{% static "style.css" %}">
+
+    {% load static %}
+    <script src="https://kit.fontawesome.com/75c5922cab.js" crossorigin="anonymous"></script>
   </head>
   
+  
+
   <div class='container'>
     {% include 'navbar.html' %}
   </div>
